created a new /products api to handle products
